[gd_scene load_steps=15 format=3 uid="uid://bugepp7ityxgx"]

[ext_resource type="Script" uid="uid://0bsk03gjsmpv" path="res://scripts/main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://ng6j4mjp362o" path="res://scenes/figure_environment.tscn" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://bnee8638le068" path="res://scripts/screens/task_screen.gd" id="2_85g3d"]
[ext_resource type="Script" uid="uid://bxvhplwobiied" path="res://scripts/screens/task_filter_screen.gd" id="3_tefeu"]
[ext_resource type="Texture2D" uid="uid://benixub5eg7nq" path="res://assets/gear_icon.tres" id="4_choun"]
[ext_resource type="Script" uid="uid://c6xlyam5vher4" path="res://scripts/components/animation_component.gd" id="4_jyhfs"]
[ext_resource type="Script" uid="uid://cbvp3d0of5sdd" path="res://scripts/screens/settings_screen.gd" id="4_o6xl0"]
[ext_resource type="Theme" uid="uid://djv8k6x7m5yp3" path="res://themes/new_theme.tres" id="5_tasktheme"]
[ext_resource type="Script" uid="uid://du67yjm7lo0e8" path="res://scripts/screens/main_menu_screen.gd" id="5_tipki"]
[ext_resource type="Script" uid="uid://djsqfgcllvdsy" path="res://scripts/quit_button.gd" id="6_tefeu"]
[ext_resource type="Script" uid="uid://b0wykdryvqmi4" path="res://scripts/screens/formulas_screen.gd" id="7_eb6dy"]
[ext_resource type="Script" uid="uid://bvt58xko28kd1" path="res://scripts/screens/playground_screen.gd" id="7_trceg"]
[ext_resource type="Script" uid="uid://dmk6r1sfe6ut6" path="res://scripts/polyhedron_environment.gd" id="8_a8y0u"]
[ext_resource type="Script" uid="uid://crqyttnj4l7vo" path="res://scripts/components/mouse_focus_component.gd" id="10_ya4ey"]

[node name="Main" type="Node" node_paths=PackedStringArray("current_screen")]
script = ExtResource("1_ig7tw")
current_screen = NodePath("MainMenuScreen")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.24313726, 0.24313726, 0.29803923, 1)

[node name="TaskScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_tasktheme")
script = ExtResource("2_85g3d")
metadata/_custom_type_script = "uid://chan7lqvx204"

[node name="HBoxContainer" type="HBoxContainer" parent="TaskScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShapeViewportContainer" type="SubViewportContainer" parent="TaskScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="ShapeViewport" type="SubViewport" parent="TaskScreen/HBoxContainer/ShapeViewportContainer"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 0

[node name="TaskEnvironment" parent="TaskScreen/HBoxContainer/ShapeViewportContainer/ShapeViewport" instance=ExtResource("2_0xm2m")]

[node name="PanelContainer" type="PanelContainer" parent="TaskScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TaskScreen/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Settings"
theme_type_variation = &"SettingsButton"
icon = ExtResource("4_choun")

[node name="Label" type="Label" parent="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BigLabel"
text = "Task Data"

[node name="TaskDataGrid" type="GridContainer" parent="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 2

[node name="HSeparator" type="HSeparator" parent="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="StepNavHbox" type="HBoxContainer" parent="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="PrevButton" type="Button" parent="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer/StepNavHbox"]
layout_mode = 2
text = "< Prev"

[node name="Label" type="Label" parent="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer/StepNavHbox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer/StepNavHbox"]
layout_mode = 2
text = "Next >"

[node name="StepsScroll" type="ScrollContainer" parent="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StepsVBox" type="VBoxContainer" parent="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer/StepsScroll"]
layout_mode = 2
size_flags_vertical = 0

[node name="CheckAnswerButton" type="Button" parent="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Check answer"

[node name="FinalLabel" type="Label" parent="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Task complete!"

[node name="NewTaskButton" type="Button" parent="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Get new task"

[node name="TipPopup" type="PopupPanel" parent="TaskScreen"]
oversampling_override = 1.0

[node name="TipLabel" type="Label" parent="TaskScreen/TipPopup"]
offset_left = 20.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 80.0
horizontal_alignment = 1

[node name="TaskFilterScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_tasktheme")
script = ExtResource("3_tefeu")

[node name="CenterContainer" type="CenterContainer" parent="TaskFilterScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="TaskFilterScreen/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TaskFilterScreen/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="TaskFilterScreen/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="DifficultyLabel" type="Label" parent="TaskFilterScreen/CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "FIlter by difficulty"

[node name="TasksLabel" type="Label" parent="TaskFilterScreen/CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Select tasks"

[node name="DifficultyList" type="ItemList" parent="TaskFilterScreen/CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
select_mode = 2
auto_width = true
auto_height = true

[node name="TaskList" type="ItemList" parent="TaskFilterScreen/CenterContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
select_mode = 2
auto_width = true
auto_height = true

[node name="StartButton" type="Button" parent="TaskFilterScreen/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="BackButton" type="Button" parent="TaskFilterScreen/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="TaskSettingsPopup" type="PopupPanel" parent="TaskFilterScreen"]
oversampling_override = 1.0
initial_position = 2

[node name="VBox" type="VBoxContainer" parent="TaskFilterScreen/TaskSettingsPopup"]
offset_left = 20.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 80.0

[node name="Label" type="Label" parent="TaskFilterScreen/TaskSettingsPopup/VBox"]
layout_mode = 2
horizontal_alignment = 1

[node name="TaskValueGrid" type="GridContainer" parent="TaskFilterScreen/TaskSettingsPopup/VBox"]
layout_mode = 2
columns = 3

[node name="PlaygroundScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_tasktheme")
script = ExtResource("7_trceg")
metadata/_custom_type_script = "uid://bvt58xko28kd1"

[node name="HBoxContainer" type="HBoxContainer" parent="PlaygroundScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShapeViewportContainer" type="SubViewportContainer" parent="PlaygroundScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="ShapeViewport" type="SubViewport" parent="PlaygroundScreen/HBoxContainer/ShapeViewportContainer"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 0

[node name="PolyhedronEnvironment" parent="PlaygroundScreen/HBoxContainer/ShapeViewportContainer/ShapeViewport" instance=ExtResource("2_0xm2m")]
script = ExtResource("8_a8y0u")

[node name="RightPanel" type="PanelContainer" parent="PlaygroundScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightVBox" type="VBoxContainer" parent="PlaygroundScreen/HBoxContainer/RightPanel"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="PlaygroundScreen/HBoxContainer/RightPanel/RightVBox"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Settings"
theme_type_variation = &"SettingsButton"
icon = ExtResource("4_choun")

[node name="Label" type="Label" parent="PlaygroundScreen/HBoxContainer/RightPanel/RightVBox"]
layout_mode = 2
theme_type_variation = &"BigLabel"
text = "Vertices"

[node name="ScrollContainer" type="ScrollContainer" parent="PlaygroundScreen/HBoxContainer/RightPanel/RightVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="PlaygroundScreen/HBoxContainer/RightPanel/RightVBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VerticesVBox" type="VBoxContainer" parent="PlaygroundScreen/HBoxContainer/RightPanel/RightVBox/ScrollContainer/VBox"]
layout_mode = 2

[node name="NewVertexButton" type="Button" parent="PlaygroundScreen/HBoxContainer/RightPanel/RightVBox/ScrollContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Add new vertex"

[node name="HSeparator" type="HSeparator" parent="PlaygroundScreen/HBoxContainer/RightPanel/RightVBox"]
layout_mode = 2

[node name="CreatePolyhedronButton" type="Button" parent="PlaygroundScreen/HBoxContainer/RightPanel/RightVBox"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Create Polyhedron"

[node name="SettingsScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_tasktheme")
script = ExtResource("4_o6xl0")

[node name="CenterContainer" type="CenterContainer" parent="SettingsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = 30.0
offset_right = 14.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="SettingsScreen/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsScreen/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsScreen/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="Grid" type="GridContainer" parent="SettingsScreen/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="MainMenuButton" type="Button" parent="SettingsScreen/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="BackButton" type="Button" parent="SettingsScreen/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="ConfirmPopup" type="PopupPanel" parent="SettingsScreen"]
oversampling_override = 1.0
initial_position = 2
size = Vector2i(275, 100)

[node name="VBox" type="VBoxContainer" parent="SettingsScreen/ConfirmPopup"]
offset_left = 20.0
offset_top = 20.0
offset_right = 255.0
offset_bottom = 80.0

[node name="Label" type="Label" parent="SettingsScreen/ConfirmPopup/VBox"]
layout_mode = 2
text = "Some settings have been changed
Do you want to save the changes?"
horizontal_alignment = 1

[node name="ButtonHBox" type="HBoxContainer" parent="SettingsScreen/ConfirmPopup/VBox"]
layout_mode = 2

[node name="YesButton" type="Button" parent="SettingsScreen/ConfirmPopup/VBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Yes"

[node name="NoButton" type="Button" parent="SettingsScreen/ConfirmPopup/VBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "No"

[node name="CancelButton" type="Button" parent="SettingsScreen/ConfirmPopup/VBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="FormulasScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_tasktheme")
script = ExtResource("7_eb6dy")

[node name="PanelContainer" type="PanelContainer" parent="FormulasScreen"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBox" type="HBoxContainer" parent="FormulasScreen/PanelContainer"]
layout_mode = 2

[node name="TaskFilterVBox" type="VBoxContainer" parent="FormulasScreen/PanelContainer/HBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.25

[node name="TaskFilterEdit" type="LineEdit" parent="FormulasScreen/PanelContainer/HBox/TaskFilterVBox"]
layout_mode = 2
placeholder_text = "Filter tasks"

[node name="TaskList" type="ItemList" parent="FormulasScreen/PanelContainer/HBox/TaskFilterVBox"]
layout_mode = 2
auto_width = true
auto_height = true

[node name="MainMenuButton" type="Button" parent="FormulasScreen/PanelContainer/HBox/TaskFilterVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Main Menu"

[node name="VSeparator" type="VSeparator" parent="FormulasScreen/PanelContainer/HBox"]
layout_mode = 2

[node name="InfoVBox" type="VBoxContainer" parent="FormulasScreen/PanelContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="AreaTipHeader" type="Label" parent="FormulasScreen/PanelContainer/HBox/InfoVBox"]
layout_mode = 2
text = "Area tip"

[node name="AreaTipLabel" type="Label" parent="FormulasScreen/PanelContainer/HBox/InfoVBox"]
layout_mode = 2

[node name="VolumeTipHeader" type="Label" parent="FormulasScreen/PanelContainer/HBox/InfoVBox"]
layout_mode = 2
text = "Volume tip"

[node name="VolumeTipLabel" type="Label" parent="FormulasScreen/PanelContainer/HBox/InfoVBox"]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="FormulasScreen/PanelContainer/HBox"]
layout_mode = 2

[node name="TaskVBox" type="VBoxContainer" parent="FormulasScreen/PanelContainer/HBox"]
layout_mode = 2
size_flags_stretch_ratio = 0.5

[node name="SubViewportContainer" type="SubViewportContainer" parent="FormulasScreen/PanelContainer/HBox/TaskVBox"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="SubViewport" type="SubViewport" parent="FormulasScreen/PanelContainer/HBox/TaskVBox/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(768, 768)
render_target_update_mode = 4

[node name="TaskEnvironment" parent="FormulasScreen/PanelContainer/HBox/TaskVBox/SubViewportContainer/SubViewport" instance=ExtResource("2_0xm2m")]

[node name="TaskDataGrid" type="GridContainer" parent="FormulasScreen/PanelContainer/HBox/TaskVBox"]
layout_mode = 2
columns = 2

[node name="MainMenuScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_tasktheme")
script = ExtResource("5_tipki")

[node name="CenterContainer" type="CenterContainer" parent="MainMenuScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MainMenuScreen/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuScreen/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_tasktheme")
theme_type_variation = &"MainMenuLabel"
text = "Main Menu"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Start"

[node name="MouseFocusComponent" type="Node" parent="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer/StartButton"]
script = ExtResource("10_ya4ey")
metadata/_custom_type_script = "uid://crqyttnj4l7vo"

[node name="AnimationComponent" type="Node" parent="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer/StartButton"]
script = ExtResource("4_jyhfs")
trans_type = 4
ease_type = 1
scale_value = Vector2(1.1, 1.1)
duration = 0.1
metadata/_custom_type_script = "uid://c6xlyam5vher4"

[node name="FormulasButton" type="Button" parent="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Formulas"

[node name="MouseFocusComponent" type="Node" parent="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer/FormulasButton"]
script = ExtResource("10_ya4ey")
metadata/_custom_type_script = "uid://crqyttnj4l7vo"

[node name="AnimationComponent" type="Node" parent="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer/FormulasButton"]
script = ExtResource("4_jyhfs")
trans_type = 4
ease_type = 1
scale_value = Vector2(1.1, 1.1)
duration = 0.1
metadata/_custom_type_script = "uid://c6xlyam5vher4"

[node name="PlaygroundButton" type="Button" parent="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Playground"

[node name="SettingsButton" type="Button" parent="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Settings"

[node name="MouseFocusComponent" type="Node" parent="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer/SettingsButton"]
script = ExtResource("10_ya4ey")
metadata/_custom_type_script = "uid://crqyttnj4l7vo"

[node name="AnimationComponent2" type="Node" parent="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer/SettingsButton"]
script = ExtResource("4_jyhfs")
trans_type = 4
ease_type = 1
scale_value = Vector2(1.1, 1.1)
duration = 0.1
metadata/_custom_type_script = "uid://c6xlyam5vher4"

[node name="QuitButton" type="Button" parent="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Quit"
script = ExtResource("6_tefeu")

[node name="MouseFocusComponent" type="Node" parent="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer/QuitButton"]
script = ExtResource("10_ya4ey")
metadata/_custom_type_script = "uid://crqyttnj4l7vo"

[node name="AnimationComponent2" type="Node" parent="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer/QuitButton"]
script = ExtResource("4_jyhfs")
trans_type = 4
ease_type = 1
scale_value = Vector2(1.1, 1.1)
duration = 0.1
metadata/_custom_type_script = "uid://c6xlyam5vher4"

[connection signal="pressed" from="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer/StepNavHbox/PrevButton" to="TaskScreen" method="_on_prev_step_pressed"]
[connection signal="pressed" from="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer/StepNavHbox/NextButton" to="TaskScreen" method="_on_next_step_pressed"]
[connection signal="pressed" from="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer/CheckAnswerButton" to="TaskScreen" method="_on_check_answer_button_pressed"]
[connection signal="pressed" from="TaskScreen/HBoxContainer/PanelContainer/VBoxContainer/NewTaskButton" to="TaskScreen" method="_on_new_task_button_pressed"]
[connection signal="multi_selected" from="TaskFilterScreen/CenterContainer/PanelContainer/VBoxContainer/GridContainer/DifficultyList" to="TaskFilterScreen" method="_on_difficulty_item_list_multi_selected"]
[connection signal="item_clicked" from="TaskFilterScreen/CenterContainer/PanelContainer/VBoxContainer/GridContainer/TaskList" to="TaskFilterScreen" method="_on_task_list_item_clicked"]
[connection signal="resized" from="TaskFilterScreen/CenterContainer/PanelContainer/VBoxContainer/GridContainer/TaskList" to="TaskFilterScreen" method="_on_task_list_resized"]
[connection signal="pressed" from="TaskFilterScreen/CenterContainer/PanelContainer/VBoxContainer/StartButton" to="." method="_on_task_filter_start_button_pressed"]
[connection signal="pressed" from="TaskFilterScreen/CenterContainer/PanelContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PlaygroundScreen/HBoxContainer/RightPanel/RightVBox/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PlaygroundScreen/HBoxContainer/RightPanel/RightVBox/ScrollContainer/VBox/NewVertexButton" to="PlaygroundScreen" method="_on_new_vertex_button_pressed"]
[connection signal="pressed" from="PlaygroundScreen/HBoxContainer/RightPanel/RightVBox/CreatePolyhedronButton" to="PlaygroundScreen" method="_on_create_polyhedron_button_pressed"]
[connection signal="left" from="SettingsScreen" to="." method="_on_settings_screen_left"]
[connection signal="pressed" from="SettingsScreen/CenterContainer/PanelContainer/VBoxContainer/MainMenuButton" to="SettingsScreen" method="leave_to_main_menu"]
[connection signal="pressed" from="SettingsScreen/CenterContainer/PanelContainer/VBoxContainer/BackButton" to="SettingsScreen" method="leave_to_last"]
[connection signal="pressed" from="SettingsScreen/ConfirmPopup/VBox/ButtonHBox/YesButton" to="SettingsScreen" method="_on_yes_button_pressed"]
[connection signal="pressed" from="SettingsScreen/ConfirmPopup/VBox/ButtonHBox/NoButton" to="SettingsScreen" method="_on_no_button_pressed"]
[connection signal="pressed" from="SettingsScreen/ConfirmPopup/VBox/ButtonHBox/CancelButton" to="SettingsScreen" method="_on_cancel_button_pressed"]
[connection signal="text_changed" from="FormulasScreen/PanelContainer/HBox/TaskFilterVBox/TaskFilterEdit" to="FormulasScreen" method="_on_task_filter_edit_text_changed"]
[connection signal="item_selected" from="FormulasScreen/PanelContainer/HBox/TaskFilterVBox/TaskList" to="FormulasScreen" method="_on_task_list_item_selected"]
[connection signal="pressed" from="FormulasScreen/PanelContainer/HBox/TaskFilterVBox/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer/StartButton" to="." method="_on_main_menu_start_button_pressed"]
[connection signal="pressed" from="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer/FormulasButton" to="." method="_on_formulas_button_pressed"]
[connection signal="pressed" from="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer/PlaygroundButton" to="." method="_on_playground_button_pressed"]
[connection signal="pressed" from="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer/QuitButton" to="MainMenuScreen/CenterContainer/PanelContainer/VBoxContainer/QuitButton" method="_on_pressed"]
